<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ strings.xml is part of Check Me In
  ~
  ~ Copyright (c) 2014 Quentin Braet
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  ~ Report bugs or new features to: quentinbraet@gmail.com
  -->

<resources>

    <string name="app_name">Check Me In</string>
    <string name="action_settings">Settings</string>
    <string name="remove">Remove</string>
    <string name="login_with_foursquare">Login with Foursquare</string>
    <string name="app_not_installed_message">To do this, you’ll need the latest version of Foursquare installed.</string>
    <string name="connected_to_foursquare">Hey looks like you’re connected to Foursquare!</string>
    <string name="denied">You denied the access</string>
    <string name="canceled">The request was canceled</string>
    <string name="add_venue_to_monitor">Add venue to monitor</string>
    <string name="mayorships">Mayorships</string>
    <string name="checkin_history">Checkin history</string>
    <string name="add">Add</string>
    <string name="config">Edit</string>
    <string name="play_update">Update Play Services</string>
    <string name="maps_update">Update Google Maps</string>
    <string name="update_phone_blame">You need to update some apps to make this work</string>
    <string name="checkin_range">Checkin range</string>
    <string name="config_checkin">Configure automatic checkin</string>
    <string name="save_monitor_info">Save monitor info</string>
    <string name="info_saved_venue">Info saved, you will be checked in automatically</string>
    <string name="info_removed_venue">We will no longer check you in at this location</string>
    <string name="could_not_add_geofences">Could not add geofences</string>
    <string name="could_not_remove_geofences">Could not remove geofences</string>
    <string name="geofence_enter">Geofence ENTER</string>
    <string name="geofence_exit">Geofence EXIT</string>
    <string name="check_in">Check in</string>
    <string name="checked_in_at">Checked in at</string>
    <string name="conflict_with">Conflicting with other positions (no overlap allowed):</string>
    <string name="see_more">See More</string>
    <string name="fuzzed_location">This is a private location, drag the marker (tap and hold) to the correct location.</string>
    <string name="home_placeholder_text">Tap the + sign to add some venues to track</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="days_ago">days ago</string>
    <string name="too_many_geofences">Save failed: too many geofences!</string>
    <string name="location_services_not_available">Location services is not available on this device, please turn it on</string>
    <string name="checkin_delay">Checkin after</string>
    <string name="share">Share</string>
    <string name="settings">settings</string>
    <string name="cancel">Cancel</string>
    <string name="connect">Connect to</string>
    <string name="connect_text">This network isn\'t connected to your Foursquare account. We will redirect  you to the settings screen of the official app. Look for \"Sharing with other networks\" and connect.</string>

</resources>
