<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ activity_home.xml is part of Check Me In
  ~
  ~ Copyright (c) 2014 Quentin Braet
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  ~ Report bugs or new features to: quentinbraet@gmail.com
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_gray"
    android:fitsSystemWindows="true"
    android:clipToPadding="false">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mapview"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/card_outer_padding_horizontal"
        android:paddingBottom="@dimen/card_outer_padding_bottom"
        android:paddingLeft="@dimen/card_outer_padding_horizontal"
        android:paddingRight="@dimen/card_outer_padding_horizontal"
        android:descendantFocusability="blocksDescendants"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_shadow"
            android:src="@drawable/card_shadow" />

        <RelativeLayout
            android:id="@+id/inner_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/card_selector"
            android:duplicateParentState="true" >

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <fragment
                    android:id="@+id/map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:name="com.google.android.gms.maps.MapFragment"/>

                <!--suppress AndroidLintContentDescription -->
                <!--<ImageButton
                    android:id="@+id/more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/card_menu_button"
                    android:paddingLeft="10dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:clickable="true"
                    android:background="@android:color/transparent" />-->

                <!--<TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/card_title"
                    android:text="@string/add_venue_to_monitor"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/more"
                    android:layout_centerVertical="true"/>-->

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/noPlayServices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/no_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/update_phone_blame"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/updatePlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_update"
            />

        <Button
            android:id="@+id/updateMaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maps_update"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:dividerHeight="0dp"
        android:divider="@null"
        android:layout_weight="1"
        android:background="@color/card_gray"
        android:paddingTop="@dimen/card_outer_padding_top"
        android:cacheColorHint="@color/card_gray"/>

    <LinearLayout
        android:id="@+id/placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/header_button_default"
            android:text="@string/home_placeholder_text"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo_gray"/>

        </LinearLayout>

</LinearLayout>