<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ activity_add_config.xml is part of Check Me In
  ~
  ~ Copyright (c) 2014 Quentin Braet
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  ~ Report bugs or new features to: quentinbraet@gmail.com
  -->

<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/slidingLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    sothree:paralaxOffset="100dp"
    sothree:panelHeight="68dp"
    sothree:shadowHeight="4dp"
    sothree:dragView="@+id/more">

    <RelativeLayout
        android:id="@+id/overlay"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:name="com.google.android.gms.maps.MapFragment"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="@dimen/card_outer_padding_horizontal"
        android:layout_marginRight="@dimen/card_outer_padding_horizontal"
        android:background="@color/card_gray"
        android:layout_alignParentBottom="true">

        <!--<TextView
            android:id="@+id/config"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/config_checkin"/>-->

        <!--<TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/checkin_range"/>-->

        <RelativeLayout
            android:id="@+id/rangelayout"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/more"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/range"
                android:layout_height="wrap_content"
                android:layout_width="70dp"
                android:paddingTop="5dp"
                android:textSize="18sp"
                android:layout_alignParentRight="true"/>

            <SeekBar
                android:id="@+id/rangeSeek"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/range"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="?android:attr/dividerVertical"
            android:layout_alignParentTop="true"/>

        <ImageView
            style="?android:borderlessButtonStyle"
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_collapse"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/checkin_after"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="5dp"
            android:textSize="18sp"
            android:text="@string/checkin_delay"
            android:layout_below="@+id/rangelayout"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="13dp"/>


        <RelativeLayout
            android:id="@+id/timelayout"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/checkin_after">

            <TextView
                android:id="@+id/time"
                android:layout_height="wrap_content"
                android:layout_width="70dp"
                android:paddingTop="5dp"
                android:textSize="18sp"
                android:layout_alignParentRight="true"/>

            <SeekBar
                android:id="@+id/timeSeek"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/time"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/timelayout"
            android:orientation="horizontal"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/facebookIcon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:clickable="true"
                android:src="@drawable/facebook_disabled"
                android:layout_marginRight="10dp"/>

            <ImageView
                android:id="@+id/twitterIcon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:clickable="true"
                android:src="@drawable/twitter_disabled"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/noPlayServices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/no_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/update_phone_blame"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/updatePlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_update"
            />

        <Button
            android:id="@+id/updateMaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maps_update"
            />
    </LinearLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>
